# base

backend/: .gitignore  dependencies.py  main.py  pyproject.toml
backend/docs/: openapi.yaml
backend/routers/: items.py
backend/scripts/: export-openapi.py
frontend/: biome.json  bun.lockb  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/features/Counter/: index.tsx
